objects/ssot__Problem__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Incident Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OwnerId__c</fullName>
        <label>Owner</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OwnerObject__c</fullName>
        <label>Owner Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParentProblemId__c</fullName>
        <label>Parent Problem</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PriorityOverrideReasonText__c</fullName>
        <label>Priority Override Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProblemCategory__c</fullName>
        <label>Problem Category</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProblemImpact__c</fullName>
        <label>Problem Impact</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProblemNumber__c</fullName>
        <label>Problem Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProblemPriority__c</fullName>
        <label>Problem Priority</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProblemStatusCategory__c</fullName>
        <label>Problem Status Category</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProblemStatus__c</fullName>
        <label>Problem Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProblemSubCateogory__c</fullName>
        <label>Problem Sub Cateogory</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProblemUrgency__c</fullName>
        <label>Problem Urgency</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Problem_OwnerId_map_UserGroup_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Problem_OwnerId_map_UserGroup_Id_N_1</label>
        <referenceTo>ssot__UserGroup__dlm</referenceTo>
        <relationshipLabel>Problem_OwnerId_map_UserGroup_Id_N_1</relationshipLabel>
        <relationshipName>Problem_OwnerId_map_UserGroup_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__Problem_OwnerId_map_User_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Problem_OwnerId_map_User_Id_N_1</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>Problem_OwnerId_map_User_Id_N_1</relationshipLabel>
        <relationshipName>Problem_OwnerId_map_User_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__Problem_ResolvedById_map_User_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Problem_ResolvedById_map_User_Id_N_1</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>Problem_ResolvedById_map_User_Id_N_1</relationshipLabel>
        <relationshipName>Problem_ResolvedById_map_User_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__ResolutionDateTime__c</fullName>
        <label>Resolution DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ResolutionSummaryText__c</fullName>
        <label>Resolution Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ResolvedById__c</fullName>
        <label>Resolved By</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RootCauseSummaryText__c</fullName>
        <label>Root Cause Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009442154_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Problem_ParentProblemId_map_Problem__rel</label>
        <referenceTo>ssot__Problem__dlm</referenceTo>
        <relationshipLabel>Problem_ParentProblemId_map_Problem__rel</relationshipLabel>
        <relationshipName>rel_1702009442154_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>